fix: update tsconfig to add moduleResolution bundler

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -12,6 +12,7 @@
     "compilerOptions": {
         "composite": true,
         "types": ["electron-vite/node"],
+        "moduleResolution": "bundler",
         "baseUrl": ".",
         "paths": {
             "@/*": ["src/*"],
