feat: optimize build configuration and add release workflow

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -70,5 +70,8 @@ appImage:
 
 npmRebuild: false
 compression: normal
+publish:
+    provider: github
+    releaseType: release
 electronDownload:
     mirror: https://npmmirror.com/mirrors/electron/
