--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,18 +49,24 @@ jobs:
         uses: actions/upload-artifact@v6
         with:
           name: linux-release
-          path: dist/*.AppImage
-          
+          path: |
+            dist/*.AppImage
+            dist/*.deb
+
       - name: Upload Windows artifacts
         if: matrix.os == 'windows-latest'
         uses: actions/upload-artifact@v6
         with:
           name: windows-release
-          path: dist/*.exe
-          
+          path: |
+            dist/*.exe
+            dist/*.exe.blockmap
+
       - name: Upload macOS artifacts
         if: matrix.os == 'macos-latest'
         uses: actions/upload-artifact@v6
         with:
           name: macos-release
-          path: dist/*.dmg
+          path: |
+            dist/*.dmg
+            dist/*.dmg.blockmap
