--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
         "build": "pnpm run typecheck && electron-vite build",
         "postinstall": "electron-builder install-app-deps",
         "build:unpack": "pnpm run build && electron-builder --dir",
-        "build:win": "pnpm run build && electron-builder --win",
-        "build:mac": "electron-vite build && electron-builder --mac",
-        "build:linux": "electron-vite build && electron-builder --linux",
+        "build:win": "pnpm run build && electron-builder --win --publish never",
+        "build:mac": "electron-vite build && electron-builder --mac --publish never",
+        "build:linux": "electron-vite build && electron-builder --linux --publish never",
+        "release:win": "pnpm run build && electron-builder --win --publish always",
+        "release:mac": "electron-vite build && electron-builder --mac --publish always",
+        "release:linux": "electron-vite build && electron-builder --linux --publish always",
         "db:generate": "drizzle-kit generate",
         "db:migrate": "drizzle-kit migrate",
         "db:sync": "tsx scripts/sync-databases.ts",
