--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "learn-tech",
-    "version": "1.0.0",
+    "version": "1.1.0",
     "description": "An Electron application with React and TypeScript",
     "main": "./out/main/index.js",
-    "author": "example.com",
+    "author": "sebetc4",
     "homepage": "https://electron-vite.org",
     "scripts": {
         "format": "prettier --write .",
