fix(import): resolve Windows tar.zst metadata extraction compatibility

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -51,6 +51,7 @@ mac:
     hardenedRuntime: true
     gatekeeperAssess: false
     notarize: false
+    identity: null
 dmg:
     artifactName: ${name}-${version}.${ext}
 
