--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -74,6 +74,10 @@ appImage:
 npmRebuild: false
 compression: maximum
 asar: true
+
+# Hook to create no-sandbox wrapper for Linux AppImage
+# Fixes 60-second startup delay on Fedora, Arch, Debian, etc.
+afterPack: ./scripts/afterPack.ts
 publish:
     provider: github
     releaseType: release
